# ryubot

./: .env.example  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/apis/lastfm/: api.rs  mod.rs  structs.rs  user.rs
src/commands/: general.rs  lastfm.rs  mod.rs  owner.rs
src/modules/: database.rs  events.rs  mod.rs  pagination.rs  parsers.rs  types.rs
