[package]
name = "ryubot"
version = "0.2.0"
authors = ["Joinemm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kankyo = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.3"
chrono = "0.4.19"
serde = "1.0.125"
serde_json = "1.0.64"
serde-aux = "2.2.0"
quick-error = "2.0.0"
serenity = "0.10"
serenity_utils = "0.6.1"
md5 = "0.7.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.0"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres"]